Progress on writing of the class constructors.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -160,12 +160,16 @@
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
     <Compile Include="CodeElementAnalysis\Statements\ThrowStatement.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\IAccessor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\ArgumentVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Attribute\AttributeListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Attribute\AttributeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\ConstructorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\EqualsValueClauseVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\AddAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayInitializerExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\ElementAccessExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\FalseLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ImplicitArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\MultiplyExpressionVisitor.cs" />
@@ -173,6 +177,7 @@
     <Compile Include="CodeTreeLuaVisitor\Expression\ObjectCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\SimpleAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\StringLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\ThisExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\TwoSidedExpressionVisitorBase.cs" />
     <Compile Include="CodeTreeLuaVisitor\FieldDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\GetAccessorDeclarationVisitor.cs" />
@@ -180,8 +185,11 @@
     <Compile Include="CodeTreeLuaVisitor\Accessor\AccessorListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Lists\ArgumentListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Lists\BaseListVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Lists\BracketedArgumentListVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Lists\ParameterListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Lists\TypeParameterListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Name\GenericNameVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\ParameterVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\PropertyDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Scope.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\SetAccessorDeclarationVisitor.cs" />
