--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -168,18 +168,37 @@
     <Compile Include="CodeTreeLuaVisitor\ConstructorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\EqualsValueClauseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\AddAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\AddExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\ArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayInitializerExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\AsExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\BaseExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\CastExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\CharacterLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ElementAccessExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\EqualsExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\FalseLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ImplicitArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\InvocationExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\IsExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\MultiplyExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\NullLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\NumericLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ObjectCreationExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\ParenthesizedExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\ParenthesizedLambdaExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\PostDecrementExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\PostIncrementExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\SimpleAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\SimpleLambdaExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\StringLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\SubtractAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\SubtractExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ThisExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TrueLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\TwoSidedExpressionVisitorBase.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TypeOfExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\UnaryMinusExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\FieldDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\GetAccessorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\IndentedTextWriterExtension.cs" />
@@ -196,8 +215,13 @@
     <Compile Include="CodeTreeLuaVisitor\Scope.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\SetAccessorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Statement\ExpressionStatementVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Statement\ForEachStatementVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Statement\IfStatementVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Statement\LocalDeclarationStatementVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Statement\ReturnStatementVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Statement\SimpleMemberAccessExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Statement\SwitchStatementVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Statement\TryStatementVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\TypeKnowledgeExtensions.cs" />
     <Compile Include="CodeTreeLuaVisitor\TypeParameterVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\ArrayTypeVisitor.cs" />
