Refactoring of expression visitors. Visitors for literal. Correct determination of members before invocation.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -165,44 +165,44 @@
     <Compile Include="CodeTreeLuaVisitor\Attribute\AttributeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\ConstructorDeclarationVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\LiteralVisitorBase.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\ConstructorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\EqualsValueClauseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\AddAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\AddExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayInitializerExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\AsExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\BaseExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\CastExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\CharacterLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\CharacterLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\CollectionInitializerExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ComplexElementInitializerExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ElementAccessExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\EqualsExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\FalseLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\FalseLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ImplicitArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\InvocationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\IsExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\LogicalAndExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\MultiplyExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\NullLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TwoSided\MultiplyExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\NullLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\NumericLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ObjectCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ParenthesizedExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ParenthesizedLambdaExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\PostDecrementExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\PostIncrementExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\SimpleAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TwoSided\SimpleAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\SimpleLambdaExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\StringLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\StringLiteralExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\SubtractAssignmentExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\SubtractExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TwoSided\SubtractExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ThisExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\TrueLiteralExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\TwoSidedExpressionVisitorBase.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Literal\TrueLiteralExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\TwoSided\TwoSidedExpressionVisitorBase.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\TypeOfExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\UnaryMinusExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\FieldDeclarationVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\FieldDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\GetAccessorDeclarationVisitor.cs" />
     <Compile Include="IIndentedTextWriterWrapper.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\AccessorListVisitor.cs" />
@@ -212,10 +212,10 @@
     <Compile Include="CodeTreeLuaVisitor\Lists\BracketedArgumentListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Lists\ParameterListVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Lists\TypeParameterListVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\MethodDeclarationVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\MethodDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Name\GenericNameVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\ParameterVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\PropertyDeclarationVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\PropertyDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Scope.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\SetAccessorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Statement\ExpressionStatementVisitor.cs" />
@@ -232,8 +232,8 @@
     <Compile Include="CodeTreeLuaVisitor\Type\BaseTypeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\ITypeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\PredefinedTypeVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\VariableDeclarationVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\VariableDeclaratorVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\VariableDeclarationVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Member\VariableDeclaratorVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\VisitorExtensions.cs" />
     <Compile Include="CodeTreeLuaVisitor\Elements\ClassDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\CodeTreeVisitor.cs" />
