Fixed writing of details in interfaces. 76 out of 99 passed.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -164,6 +164,7 @@
     <Compile Include="CodeTreeLuaVisitor\Attribute\AttributeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Elements\InterfaceState.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\BaseExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\DivideExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\GreaterThanExpressionVisitor.cs" />
