--- a/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
+++ b/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="aa.lua" />
+    <None Include="Attributes\aa.lua" />
+    <None Include="Attributes\ProvideSelfAttribute.lua" />
     <None Include="Environment.lua" />
     <None Include="ISerializer.lua" />
     <None Include="Serializer.lua" />
