Fixed an issue where the lua files in the test project were copied into the main CsLua.lua file recursively.

--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Serialization\SerializationTests.cs" />
     <Compile Include="Static\StaticTests.cs" />
     <Compile Include="StringExtensions\StringExtensionTests.cs" />
+    <Compile Include="TestIgnoredException.cs" />
     <Compile Include="TryCatchFinally\CustomException.cs" />
     <Compile Include="TryCatchFinally\TryCatchFinallyTests.cs" />
     <Compile Include="TypeMethods\Class1.cs" />
