--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -216,8 +216,10 @@
     <Compile Include="Providers\NameProvider\NameProvider.cs" />
     <Compile Include="Providers\ProviderException.cs" />
     <Compile Include="Providers\Providers.cs" />
+    <Compile Include="Providers\TypeKnowledgeRegistry\IKnowledge.cs" />
     <Compile Include="Providers\TypeKnowledgeRegistry\ITypeKnowledgeRegistry.cs" />
-    <Compile Include="Providers\TypeKnowledgeRegistry\PossibleInvocations.cs" />
+    <Compile Include="Providers\TypeKnowledgeRegistry\MethodKnowledge.cs" />
+    <Compile Include="Providers\TypeKnowledgeRegistry\PossibleMethods.cs" />
     <Compile Include="Providers\TypeKnowledgeRegistry\TypeKnowledge.cs" />
     <Compile Include="Providers\TypeKnowledgeRegistry\TypeKnowledgeRegistry.cs" />
     <Compile Include="Providers\TypeProvider\ActionFuncTypes.cs" />
