--- a/CsLuaConverter/CsLuaConverterTests/CsLuaConverterTests.csproj
+++ b/CsLuaConverter/CsLuaConverterTests/CsLuaConverterTests.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CsLuaTestConversionTests.cs" />
+    <Compile Include="CoverageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CsLuaConverter\CsLuaConverter.csproj">
