--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Interfaces\InheritingInterfaceImplementation.cs" />
     <Compile Include="Params\ClassWithParams.cs" />
     <Compile Include="Params\ParamsTests.cs" />
+    <Compile Include="Statements\StatementsTests.cs" />
     <Compile Include="Static\StaticClass.cs" />
     <Compile Include="Interfaces\InterfacesTests.cs" />
     <Compile Include="Interfaces\InterfaceWithGenerics.cs" />
