--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -73,6 +73,7 @@
     <Compile Include="General\ClassAmb.cs" />
     <Compile Include="General\ClassInitializerAndCstor.cs" />
     <Compile Include="General\ClassWithEquals.cs" />
+    <Compile Include="General\ClassWithIndexer.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
     <Compile Include="General\ClassWithSwitch.cs" />
     <Compile Include="General\ClassWithTypeAndVariableNaming.cs" />
