--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -75,7 +75,7 @@
     <Compile Include="General\ClassWithEquals.cs" />
     <Compile Include="General\ClassWithIndexer.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
-    <Compile Include="General\ClassWithSwitch.cs" />
+    <Compile Include="Statements\ClassWithSwitch.cs" />
     <Compile Include="General\ClassWithTypeAndVariableNaming.cs" />
     <Compile Include="General\GeneralTests.cs" />
     <Compile Include="General\Inheriter.cs" />
