Test and support for indexer in interfaces.

--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Wrap\IInheritingInterface.cs" />
     <Compile Include="Wrap\IInheritingInterfaceWithGenerics.cs" />
     <Compile Include="Wrap\IInterfaceWithGenerics.cs" />
+    <Compile Include="Wrap\IInterfaceWithIndexer.cs" />
     <Compile Include="Wrap\IInterfaceWithMultipleReturnValues.cs" />
     <Compile Include="Wrap\IInterfaceWithWrappedValues.cs" />
     <Compile Include="Wrap\INonWrappedProperty.cs" />
