Added several binary expressions, including unit tests.

--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Arrays\ArraysTests.cs" />
     <Compile Include="Arrays\ClassWithArrays.cs" />
     <Compile Include="Collections\CollectionsTests.cs" />
+    <Compile Include="Expressions\ExpressionsTests.cs" />
     <Compile Include="General\ACommonName.cs" />
     <Compile Include="General\Base.cs" />
     <Compile Include="General\ClassAmb.cs" />
